feat: Add login and send email verifiaction handlers
